--- a/index.html
+++ b/index.html
@@ -9,31 +9,31 @@
 
 <meta name="description" itemprop="description" content="I am a Principal Security Engineer, advisor, investor, and writer mainly interested in cloud native technologies, security, and technical leadership. This website serves as a portfolio for my expertise.">
 
-<meta name="author" content="Marco Lancini">
+<meta name="author" content="Andrew Chakdahah">
 
-<meta name="keywords" content="cloud security roadmap, cloud security, cloudsecbooks, cloudsecdocs, cloudseclist, marco lancini, praisework, security, securitybite, technical leadership">
+<meta name="keywords" content="cloud security roadmap, cloud security, cloudsecbooks, cloudsecdocs, cloudseclist, Andrew Chakdahah, praisework, security, securitybite, technical leadership">
 
 <link rel="icon" type="image/png" href="https://assets.marcolancini.it/hotlink-ok/personal/v2/icon/transparent-cropped.png" />
 
 <meta property="og:locale" content="en_GB">
 <meta property="og:type" content="website">
-<meta property="og:title" content="Marco Lancini's Website">
+<meta property="og:title" content="Andrew Chakdahah's Website">
 <meta property="og:description" content="I am a Principal Security Engineer, advisor, investor, and writer mainly interested in cloud native technologies, security, and technical leadership. This website serves as a portfolio for my expertise.">
 <meta property="og:url" content="https://www.marcolancini.it/">
-<meta property="og:site_name" content="Marco Lancini's Website">
-<meta property="article:author" content="Marco Lancini" />
+<meta property="og:site_name" content="Andrew Chakdahah's Website">
+<meta property="article:author" content="Andrew Chakdahah" />
 <meta property="article:published_time" content />
 
 <meta property="og:image" content="https://assets.marcolancini.it/hotlink-ok/personal/v2/icon/transparent-cropped.png">
 <meta property="twitter:image" content="https://assets.marcolancini.it/hotlink-ok/personal/v2/icon/transparent-cropped.png">
 
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:site" content="@lancinimarco">
-<meta name="twitter:creator" content="@lancinimarco">
-<meta name="twitter:title" content="Marco Lancini's Website">
-<meta name="twitter:description" content="I am a Principal Security Engineer, advisor, investor, and writer mainly interested in cloud native technologies, security, and technical leadership. This website serves as a portfolio for my expertise.">
+<meta name="twitter:site" content="@chaksack">
+<meta name="twitter:creator" content="@chaksack">
+<meta name="twitter:title" content="Andrew Chakdahah's Website">
+<meta name="twitter:description" content="I am a Technical Project Manager, DevSecOps Engineer, advisor, investor, and writer mainly interested in cloud native technologies, security, and technical leadership. This website serves as a portfolio for my expertise.">
 
-<link rel="me" href="https://infosec.exchange/@marcolancini">
+<link rel="me" href="https://infosec.exchange/@chaksack">
 
 <link rel="canonical" href="index.html">
 
