--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 <div class="text-logo">
 <a href="index.html">
-  <h2> Andrew Chakdahah</h2>
+  <h2 id="header-logo" alt="Andrew Chakdahah's Logo"> Andrew Chakdahah</h2>
 <!-- <img id="header-logo" src="https://assets.marcolancini.it/hotlink-ok/personal/v2/logo/transparent-notitle-dark-cropped.png" alt="Marco Lancini's Logo" /> -->
 </a>
 </div>
